# turtlebot

./: .gitignore  DO_SLAM.sh  HOW_IT_WORKS.txt  README.md  check_camera.sh  check_map_topic.sh  run_turtlebot3_teleop.sh  save_map.sh  save_map_from_topic.py  slam_camera_server.py  start_full_system.sh  start_server.sh  turtlebot3_slam_combined.launch.py
agricultural_monitoring/: .gitignore  README.md  requirements.txt  setup.sh
agricultural_monitoring/config/: llm_config.yaml  model_config.yaml  spray_config.yaml  system_config.yaml
agricultural_monitoring/esp32/: README.md
agricultural_monitoring/esp32/spray_controller/: spray_controller.ino
agricultural_monitoring/launch/: agricultural_system.launch.py
agricultural_monitoring/models/: convert_to_tflite.py
agricultural_monitoring/scripts/: start_dashboard.sh  start_system.sh  test_components.sh
agricultural_monitoring/simulation/: mock_camera.py  mock_esp32.py  run_standalone.py  test_macos.sh
agricultural_monitoring/src/: __init__.py
agricultural_monitoring/src/camera/: __init__.py  frame_capture_node.py  image_preprocessor.py
agricultural_monitoring/src/dashboard/: __init__.py  app.py
agricultural_monitoring/src/inference/: __init__.py  disease_classifier.py  inference_worker.py  model_loader.py
agricultural_monitoring/tests/: __init__.py  test_esp32_comm.py  test_inference.py  test_integration.py
opencv_camera_node/: package.xml  setup.cfg  setup.py
opencv_camera_node/launch/: turtlebot_slam_camera.launch.py
opencv_camera_node/opencv_camera_node/: opencv_camera_node.py
(+11 files in other folders)
