<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_camera_node</name>
  <version>0.1.0</version>
  <description>OpenCV USB camera node for TurtleBot on Raspberry Pi. Publishes /camera/image_raw.</description>
  <maintainer email="user@example.com">TurtleBot User</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
